# Salmon-Cpp

./: CMakeLists.txt  README.md  a.out  run.sh  test.txt
documentation/: goal.txt  intermediate.txt  pipeline.md  pipeline.txt  subsitution
documentation/assembler/: aarch32.txt
documentation/out_dated/: intermediate_optimizations.txt
examples/: RPN_EX.txt  bf.s  example.txt  fib.sm  intermediate.txt  string.cpp
include/: debug.hpp  error.h  error.hpp  main.hpp  operanddefinition.hpp  symbol_table.hpp  symboltable.hpp  typedefs.hpp  var_types.hpp  vartypes.hpp
include/asm/: aarch32_asm.hpp  aarch32_assembler.h  value_asm.hpp
include/binary/: elf.h
src/: a.out  asm.cpp  asm.cpp.save  debug.cpp  global.cpp  intermediate.cpp  main.cpp  oldasm.cpp  symbol_table.cpp  symboltable.cpp  token_reader.cpp  tokenizer.cpp  var_types.cpp  vartypes.cpp
src/asm/: aarch32_asm.cpp  aarch32_assembler.c
src/binary/: elf.c
src/notused/: asm.cpp  global.cpp
src/std/aarch32_linux/: std_print.sah  std_print.sal
tests/: decrement_print.sal  print.sal  run.sh  test.sal
